@@ -754,3 +754,4 @@ m4_include(tests/t_database_sig_cleanup.at)
 m4_include(tests/t_update_switch_branch.at)
 m4_include(tests/t_mixed_case_pwd.at)
 m4_include(tests/t_read_privkey.at)
+m4_include(tests/t_security_fix.at)
